# rayforge

./: .gitignore  .gitmodules  .mac_env  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  MANIFEST.in  README.md  RELEASE_MANIFEST.md  Rayforge.spec  conftest.py  pixi.toml  plan.md  pyinstaller_dyld_env.py  pyproject.toml  rayforge-v4900bbd9.spec  rayforge.code-workspace  requirements.txt  rotary.md  rotary_nogo_zones.md  run.bat  sketch.md
.github/: dependabot.yml
crates/rayforge-geo-py/: Cargo.toml
crates/rayforge-geo-py/src/: algo.rs  flex_point.rs  geometry.rs  lib.rs  path.rs  shape.rs
data/: org.rayforge.rayforge.desktop  org.rayforge.rayforge.metainfo.xml  org.rayforge.rayforge.xml
debian/: control  postinst  requirements-bundle.txt  rules
flatpak/: com.barebaric.rayforge.yml  org.rayforge.rayforge.yml  python3-requirements.yaml
hooks/: hook-gi.repository.Gtk.py  hook-rayforge.py  hook-raygeo.py
rayforge/: actions.py  app.py  config.py  const.py  context.py  debug.py  icons.py  logging_setup.py  main_menu.py  mainwindow.py  toolbar.py  uiscript.py  updater.py  usage.py  version.py  version.txt  worker_init.py
scripts/: analyze_grbl_acks.py  build-deb.sh  clean.sh  deploy_website.sh  fetch_download_stats.py  fetch_patreon_supporters.py  flatpak-pip-generator.py  generate_affiliate_link.py  mac_build.sh  mac_setup.sh  macos_create_icon.sh  normalize_icons.py  pixi-raygeo.sh  prepare_site_build.py  print_untranslated.sh  rebuild-raygeo.sh  stubs_to_markdown.py  take_screenshot.py  update_api_docs.py  update_translations.sh  win_build.sh  (+5 more)
(+2972 files in other folders)
